--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -184,7 +184,74 @@
   title        = {The Carbon Footprint of ChatGPT},
   author       = {Kasper Groes Albin Ludvigsen},
   howpublished = {Towards Data Science},
-  year         = {2020},
   url          = {https://towardsdatascience.com/the-carbon-footprint-of-chatgpt-66932314627d#:~:text=Using%20the%20ML%20CO2%20Impact,carbon%20footprint%20to%2023.04%20kgCO2e.},
   year         = {2022}
+}
+
+@misc{ukraine-war-dataset,
+  title        = {Daria Purtova},
+  author       = {Russia-Ukraine war - Tweets Dataset (65 days)},
+  howpublished = {Kaggle},
+  url          = {https://www.kaggle.com/datasets/foklacu/ukraine-war-tweets-dataset-65-days},
+  year         = {2022}
+}
+
+@misc{OOTB-SA,
+  title        = {10 Best Python Libraries for Sentiment Analysis},
+  author       = {Alex McFarland},
+  howpublished = {Unite.AI},
+  url          = {https://www.unite.ai/10-best-python-libraries-for-sentiment-analysis/},
+  year         = {2022}
+}
+
+@article{Transformer-SA,
+  author        = {Francesco Barbieri and 
+                   Luis Espinosa Anke and 
+                   Jose Camacho-Collados},
+  title         = {XLM-T: Multilingual Language Models in Twitter for Sentiment Analysis and Beyond},
+  year          = {2022},
+  journal       = {Cardiff NLP},
+  eprint        = {2104.12250},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
+@article{ABSA,
+  author     = {Heng Yang and
+                Biqing Zeng and
+                Mayi Xu and
+                Tianxing Wang},
+  title      = {Back to Reality: Leveraging Pattern-driven Modeling to Enable Affordable
+                Sentiment Dependency Learning},
+  journal    = {CoRR},
+  volume     = {abs/2110.08604},
+  year       = {2021},
+  url        = {https://arxiv.org/abs/2110.08604},
+  eprinttype = {arXiv},
+  eprint     = {2110.08604},
+  timestamp  = {Fri, 22 Oct 2021 13:33:09 +0200},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2110-08604.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ZS,
+  author    = {Mike Lewis and
+               Yinhan Liu and
+               Naman Goyal and
+               Marjan Ghazvininejad and
+               Abdelrahman Mohamed and
+               Omer Levy and
+               Veselin Stoyanov and
+               Luke Zettlemoyer},
+  title     = {{BART:} Denoising Sequence-to-Sequence Pre-training for Natural Language
+               Generation, Translation, and Comprehension},
+  journal   = {CoRR},
+  volume    = {abs/1910.13461},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1910.13461},
+  eprinttype = {arXiv},
+  eprint    = {1910.13461},
+  timestamp = {Thu, 31 Oct 2019 14:02:26 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1910-13461.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
