--- a/title/title.tex
+++ b/title/title.tex
@@ -44,7 +44,7 @@
 \emph{Supervisor:} \\
 Prof. Yves-Alexandre de Montjoye \\[1.2em]
 \emph{Second Marker:} \\
-TODO: Second Marker Name
+Dr. Basaran Bahadir Kocer
 \end{flushright}
 \end{minipage}\\[2cm]
 \makeatother
