--- a/interim_report.tex
+++ b/interim_report.tex
@@ -15,6 +15,10 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage[numbers]{natbib}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\usepackage{bigints}
+
 \title{Detecting Hidden Purpose in NLP Models}
 \author{Euan Scott-Watson}
 
@@ -28,6 +32,7 @@
 \input{introduction/introduction.tex}
 \input{background/background.tex}
 \input{ethical_issues/ethical_issues.tex}
+\input{datasets/datasets.tex}
 \input{methodology/methodology.tex}
 \input{project_plan/project_plan.tex}
 \input{conclusion/conclusion.tex}
